# netdisco-rust

./: .gitignore  Cargo.toml  README.md
docs/: guide.md
migrations/: 001_initial_schema.sql
src/: lib.rs  main.rs
src/backend/: manager.rs  mod.rs  scheduler.rs
src/config/: mod.rs  settings.rs
src/db/: migrate.rs  mod.rs  pool.rs  queries.rs
src/models/: admin.rs  device.rs  device_browser.rs  device_ip.rs  device_module.rs  device_port.rs  device_port_log.rs  device_port_power.rs  device_port_ssid.rs  device_port_vlan.rs  device_port_wireless.rs  device_power.rs  device_skip.rs  device_vlan.rs  enterprise.rs  log.rs  manufacturer.rs  mod.rs  node.rs  node_ip.rs  node_monitor.rs  node_nbt.rs  node_wireless.rs  oui.rs  process.rs  session.rs  snmp_object.rs  statistics.rs  subnet.rs  topology.rs  user.rs  user_log.rs
src/snmp/: client.rs  mod.rs  oids.rs
src/util/: dns.rs  mod.rs  net.rs  permission.rs
src/web/: api.rs  auth.rs  handlers.rs  mod.rs  routes.rs
src/worker/: arpnip.rs  discover.rs  expire.rs  macsuck.rs  mod.rs  nbtstat.rs  portcontrol.rs
tests/: test_suite.rs
tests/e2e/: workflows.rs
tests/integration/: backend.rs  mod.rs  web_api.rs  web_handlers.rs
tests/unit/: config.rs  mod.rs  models.rs  snmp.rs  util.rs
